syntax = "proto3";

package holos.organization.v1alpha1;

option go_package = "github.com/holos-run/holos/service/gen/holos/organization/v1alpha1;organization";

// git clone https://github.com/bufbuild/protovalidate then add <parent>/protovalidate/proto/protovalidate to your editor proto search path
import "google/protobuf/field_mask.proto";
import "holos/object/v1alpha1/object.proto";
import "holos/organization/v1alpha1/organization.proto";

// For validation, see the [Standard constraints](https://github.com/bufbuild/protovalidate/blob/main/docs/standard-constraints.md)

message CreateOrganizationRequest {
  Organization organization = 1;
}

message CreateOrganizationResponse {
  Organization organization = 1;
}

message ListOrganizationsRequest {
  google.protobuf.FieldMask field_mask = 1;
}

message ListOrganizationsResponse {
  optional holos.object.v1alpha1.UserRef user = 1;
  repeated Organization organizations = 2;
}

service OrganizationService {
  rpc CreateOrganization(CreateOrganizationRequest) returns (CreateOrganizationResponse) {}
  rpc ListOrganizations(ListOrganizationsRequest) returns (ListOrganizationsResponse) {}
}
